# bai_vibration_microphone_signal_processing

./: README.md  audio_vibration_multi_core.py  audio_vibration_single_core.py  create_spectrogram_pngs_parallelized.py  make_mp4_microphone.py  make_mp4_vibration.py  play_audio_with_spectrogram.py  play_vibration_with_spectrogram.py  pyproject.toml  requirements.txt  save_sensor_data.py  save_vibration_pngs.py  utils.py
audio/: create_spectrogram_pngs_parallelized.py  make_mp4_microphone.py  play_audio_with_spectrogram.py
misc/: audio_vibration_single_core.py  dataloader.py  gas2.sh  save_sensor_data.py  test_mp4_generation.py  unit_test.py
vibration/: make_mp4_vibration.py  play_vibration_with_spectrogram.py  save_vibration_pngs.py
