[project]
name = "bai-vibration-microphone-signal-processing"
version = "0.1.0"
description = "Audio and vibration signal processing toolkit for acoustic anomaly detection and industrial sensor monitoring"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.0",
    "botocore>=1.40.0",
    "cloudpathlib>=0.23.0",
    "matplotlib>=3.10.0",
    "msgpack>=1.1.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "scipy>=1.15.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
]
